--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<div class="col-12 col-sm-12 col-md-12">
   <head>
+	
     <title>Mubashir_cc portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -747,4 +749,5 @@
   <script src="js/main.js"></script>
     
   </body>
+</div>
 </html>
